# expenses_demo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  database.db  expenses_demo.py  phase1.py  pyproject.toml  sqlmodel_demo.py  todo.md
.github/workflows/: ci.yaml
src/expenses_demo/: __init__.py  adapters.py  expenses.py  factory.py  interfaces.py
tests/: conftest.py  test_expenses.py  test_expenses_extra.py  test_factory.py  test_in_memory_repository.py  test_stub.py
