[project]
name = "expenses_demo"
version = "0.1.0"
description = "Financial repository pattern demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/expenses_demo"]

[dependency-groups]
dev = [
    "prek>=0.3.8",
    "pytest-cov>=7.1.0",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
    "ty>=0.0.28",
]

[tool.coverage.run]
source = ["."]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == \"__main__\":",
    "raise NotImplementedError",
]

[tool.pytest.ini_options]
addopts = "--cov=. --cov-report=term-missing --cov-report=html"
