[project]
name = "expenses_demo"
version = "0.1.0"
description = "Financial repository pattern demo"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.12.5",
    "sqlalchemy>=2.0.49",
    "sqlmodel>=0.0.38",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/expenses_demo"]

[dependency-groups]
dev = [
    "prek>=0.3.8",
    "pytest-cov>=7.1.0",
    "pytest>=9.0.2",
    "ruff>=0.15.9",
    "ty>=0.0.28",
    "coverage-badge>=1.1.2",
]

[tool.ruff]
# Match your active 3.13 environment
target-version = "py313"
line-length = 88

[tool.ruff.lint]
# Keep your existing selection
select = ["F", "I", "E", "W", "UP"]

[tool.ty.environment]
# This is the most common fix for src-layout diagnostics
# It tells ty where the 'First Party' code starts.
extra-paths = ["src"]

[tool.ty.analysis]
# Ensure ty respects your existing type ignores from other checkers
respect-type-ignore-comments = true

[tool.pytest.ini_options]
# This tells pytest: "Always look inside 'src' for my packages"
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov=expenses_demo --cov-report=term-missing --cov-report=html --cov-report=xml"

[tool.coverage.run]
source = ["."]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == \"__main__\":",
    "raise NotImplementedError",
]

[project.scripts]
expenses = "expenses_demo.expenses:main"
